--- a/style.css
+++ b/style.css
@@ -67,4 +67,6 @@
 --focus--ring--ring-grey:  0rem 0rem 0rem rgba(152, 162, 179, 0.14);
 --focus--ring--ring-gray-secondary:  0rem 0rem 0rem rgba(152, 162, 179, 0.2);
 --focus--ring--ring-danger:  0rem 0rem 0rem rgba(240, 68, 56, 0.5);
+
+/* All style has been changes during new revamp design in 2025 */
 }
